Página perfil estatica criada

--- a/public/pages/dashboard/add_member.html
+++ b/public/pages/dashboard/add_member.html
@@ -27,27 +27,10 @@
     </nav>
     <nav class="vertical_nav">
         <ul>
-            <li>
-                <a href="dashboard.html">
-                    <span class="material-symbols-outlined">
-                        domain
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="dashboard_area.html">
-                    <span class="material-symbols-outlined">
-                        location_on
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="add_member.html" class="active">
-                    <span class="material-symbols-outlined">
-                        person_add
-                    </span>
-                </a>
-            </li>
+            <li><a href="dashboard.html"><span class="material-symbols-outlined">domain</span></a></li>
+            <li><a href="dashboard_area.html"><span class="material-symbols-outlined">location_on</span></a></li>
+            <li><a href="add_member.html" class="active"><span class="material-symbols-outlined">person_add</span></a></li>
+            <li><a href="perfil.html"><span class="material-symbols-outlined">account_circle</span></a></li>
         </ul>
     </nav>
     <div class="cadastro_container">
