--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -29,28 +29,11 @@
         </div>
     </nav>
     <nav class="vertical_nav">
-        <ul>
-            <li>
-                <a href="dashboard.html" class="active">
-                    <span class="material-symbols-outlined">
-                        domain
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="dashboard_area.html">
-                    <span class="material-symbols-outlined">
-                        location_on
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="add_member.html">
-                    <span class="material-symbols-outlined">
-                        person_add
-                    </span>
-                </a>
-            </li>
+                <ul>
+            <li><a href="dashboard.html" class="active"><span class="material-symbols-outlined">domain</span></a></li>
+            <li><a href="dashboard_area.html"><span class="material-symbols-outlined">location_on</span></a></li>
+            <li><a href="add_member.html"><span class="material-symbols-outlined">person_add</span></a></li>
+            <li><a href="perfil.html"><span class="material-symbols-outlined">account_circle</span></a></li>
         </ul>
     </nav>
 
