--- a/public/pages/cadastro/login.html
+++ b/public/pages/cadastro/login.html
@@ -116,8 +116,9 @@
           console.log(JSON.stringify(json));
           sessionStorage.EMAIL_USUARIO = json.email;
           sessionStorage.NOME_USUARIO = json.nome;
-          sessionStorage.ID_USUARIO = json.id;
-          sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
+          sessionStorage.SOBRENOME_USUARIO = json.sobrenome;
+          sessionStorage.DATACADASTRO_USUARIO = json.data_cadastro;
+          sessionStorage.ID_USUARIO = json.id
 
           setTimeout(function () {
             window.location = "../dashboard/dashboard.html";
