Ajustes iniciais da dashboard

--- a/public/pages/cadastro/login.html
+++ b/public/pages/cadastro/login.html
@@ -118,6 +118,7 @@
           sessionStorage.NOME_USUARIO = json.nome;
           sessionStorage.SOBRENOME_USUARIO = json.sobrenome;
           sessionStorage.DATACADASTRO_USUARIO = json.data_cadastro;
+          sessionStorage.NOME_EMPRESA = json.nome_empresa;
           sessionStorage.ID_USUARIO = json.id
 
           setTimeout(function () {
