--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body onload="dados()">
     <nav class="horizontal_nav">
         <a href="/index.html" class="logo">
             <img src="/assets/dashboard/logo.svg">
@@ -40,7 +40,7 @@
     <section>
         <div class="dashboard_header">
             <h1>Medição geral</h1>
-            <p>Bem-vindo de volta, <strong>Air Guard ADM</strong></p>
+            <p>Bem-vindo de volta, <strong id="NomeUsuario">Air Guard ADM</strong></p>
         </div>
         <div class="dashboard_cards">
             <div class="left">
@@ -168,3 +168,12 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.4.0/dist/chartjs-plugin-annotation.min.js"></script>
 <script src="../../js/geralDashboards.js"></script>
+
+<script>
+    function dados(){
+        var nome = sessionStorage.NOME_USUARIO;
+        var sobrenome = sessionStorage.SOBRENOME_USUARIO;
+
+        NomeUsuario.innerHTML = `${nome} ${sobrenome}`;
+    }
+</script>
