Está gerando gráficos e os outros dados da maneira correta

--- a/public/pages/cadastro/login.html
+++ b/public/pages/cadastro/login.html
@@ -119,7 +119,8 @@
           sessionStorage.SOBRENOME_USUARIO = json.sobrenome;
           sessionStorage.DATACADASTRO_USUARIO = json.data_cadastro;
           sessionStorage.NOME_EMPRESA = json.nome_empresa;
-          sessionStorage.ID_USUARIO = json.id
+          sessionStorage.ID_USUARIO = json.id;
+          sessionStorage.ID_EMPRESA = json.idEmpresa
 
           setTimeout(function () {
             window.location = "../dashboard/dashboard.html";
