--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="dados()">
+<body onload="dados(); getAlertaById(sessionStorage.getItem('ID_EMPRESA'))">
     <nav class="horizontal_nav">
         <a href="/index.html" class="logo">
             <img src="/assets/dashboard/logo.svg">
@@ -75,7 +75,7 @@
             <div class="right">
                 <div class="card card4">
                     <h3>Alertas</h3>
-                    <div class="alerts">
+                    <div class="alerts" id="alert"> 
                         <div class="alert alert1">
                             <img src="/assets/dashboard/img_area.png">
                             <h4>Linha de produção 1</h4>
@@ -141,4 +141,30 @@
 
         NomeUsuario.innerHTML = `${nome} ${sobrenome}`;
     }
+
+    function getAlertaById(id) {
+        console.log('bruno');
+    fetch('/areas/getAlertaById/' + id, { method: 'GET' })
+        .then(function (resultado) {
+            resultado.json()
+                .then(function (json) {
+                    var alerta = document.getElementById("alert");
+
+                    for (let i = 0; i < json.length; i++) {
+                        alerta.innerHTML += `                        
+                        <div class="alert alert1">
+                            <img src="/assets/dashboard/img_area.png">
+                            <h4>${json[i].nome}</h4>
+                            <p>${json[i].concentracao}ppm</p>
+                            <p class="comparison trending_up">
+                                <span class="material-symbols-outlined alert_icon">
+                                    trending_up
+                                </span>
+                                7.69%
+                            </p>
+                        </div>`
+                    }
+                })
+        })
+}
 </script>
