--- a/public/pages/dashboard/airguard_suporte.html
+++ b/public/pages/dashboard/airguard_suporte.html
@@ -30,7 +30,7 @@
     </nav>
     <nav class="vertical_nav">
         <ul>
-            <li><a href="dashboard.html"><span class="material-symbols-outlined">domain</span></a></li>
+            <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span></a></li>
             <li><a href="airguard_suporte.html" class="active"><span class="material-symbols-outlined">support_agent</span></a></li>
             <li><a href="perfil.html"><span class="material-symbols-outlined">account_circle</span></a></li>
         </ul>
