criação de empresas pela dash da airguard

--- a/public/pages/dashboard/airguard_dash.html
+++ b/public/pages/dashboard/airguard_dash.html
@@ -57,21 +57,22 @@
             </div>
             <div class="fields">
                 <label for="">Razão Social</label>
-                <input type="text">
+                <input type="text" id="ipt_razao_social">
             </div>
             <div class="fields">
                 <label for="">Nome Fantasia</label>
-                <input type="text">
+                <input type="text" id="ipt_nome_fantasia">
             </div>
             <div class="fields">
                 <label for="">CNPJ</label>
-                <input type="text">
+                <input type="text" id="ipt_cnpj">
             </div>
             <div class="fields">
-                <button>
+                <button onclick="cadastrar()">
                     Cadastrar
                 </button>
             </div>
+            <p id="result"></p>
         </div>
     </section>
 </body>
