--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -47,11 +47,14 @@
                 <div class="row row2">
                     <div class="card card3">
                         <h3>5 Áreas com a maior concentração de CO</h3>
-                        <div class="ranking" id="rankingContainer"></div>
+                        <div style="width:100%; height:300px;">
+                            <canvas id="rankingCOChart"></canvas>
+                        </div>
                         <div class="ranking_legend">
                             <p><strong>Legenda:</strong></p>
                             <ul>
-                                <li><span class="legend_color blackred_bar"></span> Acima de 39 ppm – Perigoso (vermelho escuro)</li>
+                                <li><span class="legend_color blackred_bar"></span> Acima de 39 ppm – Perigoso
+                                    (vermelho escuro)</li>
                                 <li><span class="legend_color red_bar"></span> Até 39 ppm – Alerta (vermelho)</li>
                                 <li><span class="legend_color yellow_bar"></span> Até 30 ppm – Atenção (amarelo)</li>
                                 <li><span class="legend_color green_bar"></span> Até 20 ppm – Nível seguro (verde)</li>
@@ -75,7 +78,7 @@
             <div class="right">
                 <div class="card card4">
                     <h3>Alertas</h3>
-                    <div class="alerts" id="alert"> 
+                    <div class="alerts" id="alert">
                         <div class="alert alert1">
                             <img src="/assets/dashboard/img_area.png">
                             <h4>Linha de produção 1</h4>
@@ -144,14 +147,14 @@
 
     function getAlertaById(id) {
         console.log('bruno');
-    fetch('/areas/getAlertaById/' + id, { method: 'GET' })
-        .then(function (resultado) {
-            resultado.json()
-                .then(function (json) {
-                    var alerta = document.getElementById("alert");
+        fetch('/areas/getAlertaById/' + id, { method: 'GET' })
+            .then(function (resultado) {
+                resultado.json()
+                    .then(function (json) {
+                        var alerta = document.getElementById("alert");
 
-                    for (let i = 0; i < json.length; i++) {
-                        alerta.innerHTML += `                        
+                        for (let i = 0; i < json.length; i++) {
+                            alerta.innerHTML += `                        
                         <div class="alert alert1">
                             <img src="/assets/dashboard/img_area.png">
                             <h4>${json[i].nome}</h4>
@@ -163,8 +166,8 @@
                                 7.69%
                             </p>
                         </div>`
-                    }
-                })
-        })
-}
+                        }
+                    })
+            })
+    }
 </script>
