Alterando kpi no grafico de pizza

--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -72,7 +72,7 @@
                             <span class="kpi_destaque" id="kpiTotalAreas">0</span> <br><br>
                         </div>
                         <div class="kpi_card2">
-                            <span>Áreas acima do limite seguro:</span><br>
+                            <span>Áreas acima do limite:</span><br>
                             <span class="kpi_destaque" id="kpiAreasPerigosas">0</span>
                         </div>
                         <canvas id="COperArea"></canvas>
