adicionando campo de 'isadm' no bd e corrigindo links

--- a/public/pages/cadastro/login.html
+++ b/public/pages/cadastro/login.html
@@ -120,8 +120,9 @@
           sessionStorage.DATACADASTRO_USUARIO = json.data_cadastro;
           sessionStorage.NOME_EMPRESA = json.nome_empresa;
           sessionStorage.ID_USUARIO = json.id;
-          sessionStorage.ID_EMPRESA = json.idEmpresa
-          if (sessionStorage.ID_EMPRESA != 1) {
+          sessionStorage.ID_EMPRESA = json.idEmpresa;
+          sessionStorage.IS_ADM = json.isADM;
+          if (json.isADM != '1') {
             setTimeout(function () {
               window.location = "../dashboard/dashboard.html";
             }, 1000);
