--- a/public/pages/dashboard/airguard_dash.html
+++ b/public/pages/dashboard/airguard_dash.html
@@ -21,18 +21,21 @@
             <img src="/assets/dashboard/logo.svg">
         </a>
         <div class="links">
-            <ul>
-                <li><a href="/pages/sobre-nos/sobre_nos.html">Sobre nós</a></li>
-                <li><a href="/pages/calculadora/calculadora.html">Orçamento</a></li>
-                <li><a href="./dashboard_area.html" class="destaque_link">dashboard area</a></li>
+            <ul class="nav_superior">
+                <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span> Empresas</a></li>
+                <li><a href="airguard_suporte.html"><span class="material-symbols-outlined">support_agent</span> BOB
+                        IA</a></li>
+                <li><a href="perfil_airguard.html" class="active"><span class="material-symbols-outlined">account_circle</span>
+                        Perfil</a></li>
             </ul>
         </div>
     </nav>
     <nav class="vertical_nav">
         <ul>
-            <li><a href="airguard_dash.html" class="active"><span class="material-symbols-outlined">domain</span></a></li>
+            <li><a href="airguard_dash.html" class="active"><span class="material-symbols-outlined">domain</span></a>
+            </li>
             <li><a href="airguard_suporte.html"><span class="material-symbols-outlined">support_agent</span></a></li>
-            <li><a href="perfil.html"><span class="material-symbols-outlined">account_circle</span></a></li>
+            <li><a href="perfil_airguard.html"><span class="material-symbols-outlined">account_circle</span></a></li>
         </ul>
     </nav>
     <h1>Clientes AirGuard</h1>
@@ -53,7 +56,8 @@
         <h2>Cadastrar empresa</h2>
         <div class="fields_container">
             <div class="profile_picture">
-                <img src="https://st2.depositphotos.com/1157740/5935/i/450/depositphotos_59355045-stock-photo-worker-work-hard-with-welding.jpg">
+                <img
+                    src="https://st2.depositphotos.com/1157740/5935/i/450/depositphotos_59355045-stock-photo-worker-work-hard-with-welding.jpg">
             </div>
             <div class="fields">
                 <label for="">Razão Social</label>
@@ -79,11 +83,11 @@
 
 </html>
 <script>
-    function showRegisterModal(){
+    function showRegisterModal() {
         register_modal.classList.add('open');
         out.classList.add('open');
     }
-    function hideRegisterModal(){
+    function hideRegisterModal() {
         register_modal.classList.remove('open');
         out.classList.remove('open');
     }
