--- a/public/pages/dashboard/airguard_suporte.html
+++ b/public/pages/dashboard/airguard_suporte.html
@@ -21,10 +21,12 @@
             <img src="/assets/dashboard/logo.svg">
         </a>
         <div class="links">
-            <ul>
-                <li><a href="/pages/sobre-nos/sobre_nos.html">Sobre nós</a></li>
-                <li><a href="/pages/calculadora/calculadora.html">Orçamento</a></li>
-                <li><a href="./dashboard_area.html" class="destaque_link">dashboard area</a></li>
+            <ul class="nav_superior">
+                <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span> Empresas</a></li>
+                <li><a href="airguard_suporte.html"><span class="material-symbols-outlined">support_agent</span> BOB
+                        IA</a></li>
+                <li><a href="perfil_airguard.html" class="active"><span class="material-symbols-outlined">account_circle</span>
+                        Perfil</a></li>
             </ul>
         </div>
     </nav>
@@ -33,7 +35,7 @@
             <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span></a></li>
             <li><a href="airguard_suporte.html" class="active"><span
                         class="material-symbols-outlined">support_agent</span></a></li>
-            <li><a href="perfil.html"><span class="material-symbols-outlined">account_circle</span></a></li>
+            <li><a href="perfil_airguard.html"><span class="material-symbols-outlined">account_circle</span></a></li>
         </ul>
     </nav>
     <div class="Suporte_container">
