--- a/public/pages/dashboard/perfil_airguard.html
+++ b/public/pages/dashboard/perfil_airguard.html
@@ -20,21 +20,23 @@
       <img src="/assets/dashboard/logo.svg" />
     </a>
     <div class="links">
-      <ul>
-        <li><a href="/pages/sobre-nos/sobre_nos.html">Sobre nós</a></li>
-        <li><a href="/pages/calculadora/calculadora.html">Orçamento</a></li>
-        <li><a href="./dashboard_area.html" class="destaque_link">Dashboard Área</a></li>
-      </ul>
+        <ul class="nav_superior">
+            <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span> Empresas</a></li>
+            <li><a href="airguard_suporte.html"><span
+                        class="material-symbols-outlined">support_agent</span> BOB IA</a></li>
+            <li><a href="perfil_airguard.html" class="active"><span class="material-symbols-outlined">account_circle</span> Perfil</a></li>
+        </ul>
     </div>
   </nav>
 
-  <nav class="vertical_nav">
-    <ul>
-      <li><a href="dashboard.html"><span class="material-symbols-outlined">domain</span></a></li>
-      <li><a href="dashboard_area.html"><span class="material-symbols-outlined">location_on</span></a></li>
-      <li><a href="perfil_airguard.html" class="active"><span class="material-symbols-outlined">account_circle</span></a></li>
-    </ul>
-  </nav>
+    <nav class="vertical_nav">
+        <ul>
+            <li><a href="airguard_dash.html"><span class="material-symbols-outlined">domain</span></a></li>
+            <li><a href="airguard_suporte.html"><span
+                        class="material-symbols-outlined">support_agent</span></a></li>
+            <li><a href="perfil.html" class="active"><span class="material-symbols-outlined">account_circle</span></a></li>
+        </ul>
+    </nav>
 
   <div class="perfil_container">
     <h2>Perfil</h2>
