Botão de suporte adicionado e estilizado

--- a/public/pages/dashboard/airguard_suporte.html
+++ b/public/pages/dashboard/airguard_suporte.html
@@ -48,6 +48,10 @@
             <button onclick="enviar()"><img src="../../assets/dashboard/buttonEviar.svg" alt=""></button>
         </div>
     </div>
+    <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+        <i class="fas fa-comment-dots"></i>
+        <img src="../../assets/suporte/suporte.png" alt="">
+    </a>
 </body>
 
 <script>
