--- a/public/pages/dashboard/dashboard_area.html
+++ b/public/pages/dashboard/dashboard_area.html
@@ -54,7 +54,12 @@
             </div>
             <div class="cards" id="cards_container"></div>
         </div>
+        <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+        <i class="fas fa-comment-dots"></i>
+        <img src="../../assets/suporte/suporte.png" alt="">
+        </a>
     </section>
+    
 </body>
 
 </html>
