--- a/public/pages/dashboard/airguard_dash.html
+++ b/public/pages/dashboard/airguard_dash.html
@@ -78,6 +78,10 @@
             </div>
             <p id="result"></p>
         </div>
+        <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+        <i class="fas fa-comment-dots"></i>
+        <img src="../../assets/suporte/suporte.png" alt="">
+        </a>
     </section>
 </body>
 
