--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -85,6 +85,10 @@
                 </div>
             </div>
         </div>
+        <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+        <i class="fas fa-comment-dots"></i>
+        <img src="../../assets/suporte/suporte.png" alt="">
+        </a>
     </section>
 </body>
 
