--- a/public/pages/dashboard/perfil_airguard.html
+++ b/public/pages/dashboard/perfil_airguard.html
@@ -56,7 +56,10 @@
     </div>
     <p class="perfil_data">Membro desde: <span id="dataCadastro">data</span></p>
   </div>
-
+        <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+        <i class="fas fa-comment-dots"></i>
+        <img src="../../assets/suporte/suporte.png" alt="">
+        </a>
 </body>
 
 </html>
