--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="/pages/sobre-nos/sobre_nos.html">Sobre nós</a></li>
                 <li><a href="/pages/calculadora/calculadora.html">Orçamento</a></li>
-                <li><a href="./dashboard_area.html" class="destaque_link">dashboard area</a></li>
+                <li><a href="./dashboard_area.html" class="destaque_link">Dashboard Área</a></li>
             </ul>
         </div>
     </nav>
@@ -85,11 +85,11 @@
                 </div>
             </div>
         </div>
-        <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
+    </section>
+    <a href="https://airguard2025.atlassian.net/servicedesk/customer/portal/1" target="_blank" id="botao-suporte" title="Precisa de ajuda?">
         <i class="fas fa-comment-dots"></i>
         <img src="../../assets/suporte/suporte.png" alt="">
         </a>
-    </section>
 </body>
 
 </html>
