--- a/public/pages/dashboard/dashboard_area.html
+++ b/public/pages/dashboard/dashboard_area.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="/pages/sobre-nos/sobre_nos.html">Sobre nós</a></li>
                 <li><a href="/pages/calculadora/calculadora.html">Orçamento</a></li>
-                <li><a href="./dashboard.html" class="destaque_link">Dashboard</a></li>
+                <li><a href="./dashboard.html" class="destaque_link">Dashboard Geral</a></li>
             </ul>
         </div>
     </nav>
