mostrando apenas o ultimo alerta por area e o horario

--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -85,7 +85,7 @@
             </div>
             <div class="right">
                 <div class="card card4">
-                    <h3>Alertas</h3>
+                    <h3>Alertas (últimas 24h)</h3>
                     <div class="alerts" id="alert"></div>
                 </div>
             </div>
