--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="dados(); getAlertaById();">
+<body onload="getAlertaById();" class="dash_geral_body">
     <nav class="horizontal_nav">
         <a href="/index.html" class="logo">
             <img src="/assets/dashboard/logo.svg">
